#Project : end solution rename

--- a/Source/End/MVC4ScaffoldingEFMigrations/Views/Account/Login.cshtml
+++ b/Source/End/MVC4ScaffoldingEFMigrations/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-@model MVC4andEFMigrations.Models.LoginModel
+@model MVC4ScaffoldingEFMigrations.Models.LoginModel
 
 @{
     ViewBag.Title = "Log in";
