--- a/Source/End/MVC4ScaffoldingEFMigrations/Views/Person/Index.cshtml
+++ b/Source/End/MVC4ScaffoldingEFMigrations/Views/Person/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MVC4andEFMigrations.Models.Person>
+﻿@model IEnumerable<MVC4ScaffoldingEFMigrations.Models.Person>
 
 @{
     ViewBag.Title = "Index";
