--- a/Source/End/MVC4ScaffoldingEFMigrations/Views/Account/ChangePassword.cshtml
+++ b/Source/End/MVC4ScaffoldingEFMigrations/Views/Account/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-@model MVC4andEFMigrations.Models.ChangePasswordModel
+@model MVC4ScaffoldingEFMigrations.Models.ChangePasswordModel
 
 @{
     ViewBag.Title = "Change Password";
