--- a/Source/End/MVC4ScaffoldingEFMigrations/Views/Account/Register.cshtml
+++ b/Source/End/MVC4ScaffoldingEFMigrations/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-@model MVC4andEFMigrations.Models.RegisterModel
+@model MVC4ScaffoldingEFMigrations.Models.RegisterModel
 
 @{
     ViewBag.Title = "Register";
